src/objects/Asset.object
<CustomObject>
    <fields>
        <fullName>Controller__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Controller</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Product2.Product_Type__c</field>
                <operation>equals</operation>
                <value>Controller</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile_Base__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mobile Base</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Product2.Product_Type__c</field>
                <operation>equals</operation>
                <value>Mobile Base</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Assets (Mobile Base)</relationshipLabel>
        <relationshipName>Assets3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Robot_Arm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Robot Arm</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Product2.Product_Type__c</field>
                <operation>equals</operation>
                <value>Robot Arm</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Assets (Robot Arm)</relationshipLabel>
        <relationshipName>Assets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Teach_Pendant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Teach Pendant</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Product2.Product_Type__c</field>
                <operation>equals</operation>
                <value>Touch Pendant</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Assets (Teach Pendant)</relationshipLabel>
        <relationshipName>Assets2</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllAssets</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ASSET.SERIAL_NUMBER</columns>
        <columns>ASSET.INSTALL_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.NAME</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>Robot_Arm__c</columns>
        <columns>Controller__c</columns>
        <columns>Teach_Pendant__c</columns>
        <columns>Mobile_Base__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Assets</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>